@@ -1,3 +1,10 @@
+2007-03-07  Joris Van Damme  <joris.at.lebbeke@skynet.be>
+	
+	* libtiff/tif_win32.c: made inclusion of windows.h unconditional
+
+	* libtiff/tif_win32.c: replaced preprocessor indication for consiously
+	unused arguments by standard C indication for the same
+
 2007-02-27  Andrey Kiselev  <dron@ak4719.spb.edu>
 
 	* libtiff/tif_dirread.c: Use uint32 type instead of tsize_t in byte
